--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -2,14 +2,14 @@
 
 = Agenda
 
-==Tuesday, August 27th 9AM through Friday June 28 12:30PM
+== Tuesday, August 27th 9AM through Friday August 30th 12:30PM
 
 * Tuesday 9AM - 6PM  EDT
 * Wednesday 9AM - 6PM EDT
 * Thursday 9AM - 6PM EDT
 * Friday 9am - 12:30PM EDT
 
-== Tuesday, June 25th
+== Tuesday, August 27th
 * 9AM - 10AM
 *** Getting setup
 *** Introductions
@@ -25,7 +25,7 @@
 * 2PM - 6PM (Breaks as needed)
 *** Additional Virt Labs from Workshop
 
-== Wednesday, June 26th
+== Wednesday, August 28th
 * 9AM - 9:30AM
 *** Follow-ups, Clean-ups with Virt Labs
 * 9:30AM - 10AM
@@ -37,7 +37,7 @@
 * 1PM - 6PM (breaks as needed)
 *** Additional Labs from DO316 Chapters 7 & 8
 
-== Thursday, June 27th
+== Thursday, August 29th
 * 9AM - 11AM
 *** Trilio demo, and lab presented by Rodolfo Casas, Senior Solutions Architect & Red Hat Certified Architect from Trilio
 * 11AM - 11:30AM
@@ -51,7 +51,7 @@
 * 2PM - 6PM
 *** Split into teams for Mock Virtualization Assessments
 
-== Friday, June 28th
+== Friday, August 30th
 * 9AM - 12PM
 *** Teams present readouts from Mock Assessments and Dicovery Sessions
 * 12PM - 12:30PM
@@ -73,15 +73,15 @@ image::introductions/ah.png[]
 * Andrew Harrison
 * Managing Architect, STP
 
-image::introductions/bb.png[]
+image::introductions/th.png[]
 
-* Brian Beaudoin
-* Senior Principal Consultant, STP
+* Taylor Johnston
+* Associate Consultant, PDP
 
-image::introductions/fm.png[]
+image::introductions/tm.png[]
 
-* Freddy Montero
-* Managing Architect, STP
+* Tom McGinnis
+* Senior Consultant, STP
 
 == BootCamp Vendor Guests
 
