--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -39,14 +39,14 @@
 ** xref:module-06.adoc#migrating_vms[Migrating Virtual Machines from VMware]
 
 * xref:module-07.adoc[7. Troubleshooting]
-* xref:module-07.adoc#boot_source_na[Boot Source Not Available]
+** xref:module-07.adoc#boot_source_na[Boot Source Not Available]
 
 * xref:module-08.adoc[8. Data Protection with OADP]
-* xref:module-08.adoc#objectbucketclaim[Object Bucket Claim]
-* xref:module-08.adoc#oadp-dpa[OADP Data Protection Application]
-* xref:module-08.adoc#backups[Creating Backups]
-* xref:module-08.adoc#restore[Restoring a Virtual Machine]
-* xref:module-08.adoc#CLI_commands[CLI Commands for Troubleshooting]
+** xref:module-08.adoc#objectbucketclaim[Object Bucket Claim]
+** xref:module-08.adoc#oadp-dpa[OADP Data Protection Application]
+** xref:module-08.adoc#backups[Creating Backups]
+** xref:module-08.adoc#restore[Restoring a Virtual Machine]
+** xref:module-08.adoc#CLI_commands[CLI Commands for Troubleshooting]
 
 
 * Additional Boot Camp Content
